@@ -3270,7 +3270,7 @@ retry:
     }
 
   retry:
-#if defined(__NetBSD__) || defined(__APPLE__)
+#if defined(__NetBSD__) || defined(__APPLE__) || defined(linux)
     rb_thread_stop_timer();
 #endif
     switch ((pid = fork())) {
@@ -3300,7 +3300,7 @@ retry:
 		    ruby_sourcefile, ruby_sourceline, pname);
 	    _exit(127);
 	}
-#if defined(__NetBSD__) || defined(__APPLE__)
+#if defined(__NetBSD__) || defined(__APPLE__) || defined(linux)
 	rb_thread_start_timer();
 #endif
 	rb_io_synchronized(RFILE(orig_stdout)->fptr);
@@ -3308,7 +3308,7 @@ retry:
 	return Qnil;
 
       case -1:			/* fork failed */
-#if defined(__NetBSD__) || defined(__APPLE__)
+#if defined(__NetBSD__) || defined(__APPLE__) || defined(linux)
 	rb_thread_start_timer();
 #endif
 	if (errno == EAGAIN) {
@@ -3331,7 +3331,7 @@ retry:
 	break;
 
       default:			/* parent */
-#if defined(__NetBSD__) || defined(__APPLE__)
+#if defined(__NetBSD__) || defined(__APPLE__) || defined(linux)
 	rb_thread_start_timer();
 #endif
 	if (pid < 0) rb_sys_fail(pname);
